--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,13 @@
-logging.level.guru=debug
+spring.application.name=beer-order-service
 server.port=8081
 sfg.brewery.beer-service-host=http://localhost:8080
 
 # defaults for this docker image - vromero/activemq-artemis
 spring.artemis.user=artemis
 spring.artemis.password=simetraehcapa
+spring.jackson.serialization.write-dates-as-timestamps=false
+spring.jackson.serialization.write-date-timestamps-as-nanoseconds=false
+eureka.client.service-url.defaultZone=http://netflix:eureka@localhost:8761/eureka
+
+spring.zipkin.enabled=true
+spring.zipkin.base-url=http://localhost:9411/
